--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "strapi-plugin-upload": "3.4.0",
     "strapi-connector-bookshelf": "3.4.0",
     "knex": "<0.20.0",
-    "sqlite3": "latest"
+    "sqlite3": "latest",
+    "mysql": "^2.18.1"
   },
   "author": {
     "name": "A Strapi developer"
