--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
-    "strapi": "strapi",
-    "pm2":"pm2 start processes.json"
+    "strapi": "strapi"
   },
   "devDependencies": {},
   "dependencies": {
